--- a/builds/development/views/nav.html
+++ b/builds/development/views/nav.html
@@ -1,7 +1,7 @@
 <div class="table">
   <ul>
     <li class="branding"><a ng-href="#/">angularData</a></li>
-    <li><a ng-href="#/mettings">Meetings</a></li>
+    <li><a ng-href="#/meetings">Meetings</a></li>
     <li><a ng-href="#/login">Login</a></li>
     <li><a ng-href="#/register">Register</a></li>
   </ul>
