--- a/builds/development/views/login.html
+++ b/builds/development/views/login.html
@@ -1,6 +1,8 @@
 <section class="login">
-  <form name="myform" novalidate>
-    <h1>Hi there</h1>
+  <form name="myform"
+  ng-submit="login()"
+  novalidate>
+    <h1>Hi there!</h1>
     <p>Log-in to access the awesomeness!</p>
 
     <input type="email" name="email" placeholder="Email" autofocus
